--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,16 +2,13 @@
 <html>
   <%- include('./partials/head.ejs') %>
   <body
-    class="bg-dark text-light d-flex flex-column vh-100 align-items-center justify-content-center"
-    style="margin: 0"
+  class="bg-dark text-light d-flex flex-column vh-100 align-items-center justify-content-center"
+  style="margin: 0"
+>
+  <canvas
+    class="img-fluid vh-100"
+    id="canvas"
   >
-    <canvas
-      class="img-fluid rounded-5 m-5"
-      id="canvas"
-      style="max-width: 50%; height: auto"
-    >
-      Mohon maaf, browser Anda tidak didukung &lt;canvas&gt;.
-    </canvas>
 
     <script>
       var portStr = "";
