--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,12 +3,13 @@
   <%- include('./partials/head.ejs') %>
   <body
   class="bg-dark text-light d-flex flex-column vh-100 align-items-center justify-content-center"
-  style="margin: 0"
->
-  <canvas
-    class="img-fluid vh-100"
-    id="canvas"
+    style="margin: 0"
   >
+    <canvas
+      class="img-fluid rounded-5 m-5"
+      id="canvas"
+      style="max-width: 50%; height: auto;"
+    >
 
     <script>
       var portStr = "";
