--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,9 +6,9 @@
     style="margin: 0"
   >
     <canvas
-      class="img-fluid rounded-5 m-5"
+      class="img-fluid"
       id="canvas"
-      style="max-width: 50%; height: auto;"
+      style="max-width: 100%; height: auto;"
     >
 
     <script>
