--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,9 +6,9 @@
     style="margin: 0"
   >
     <canvas
-      class="img-fluid"
+      class="img-fluid vh-100"
       id="canvas"
-      style="max-width: 100%; height: auto;"
+      style="width: auto;"
     >
 
     <script>
