--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,9 +6,8 @@
     style="margin: 0"
   >
     <canvas
-      class="img-fluid vh-100"
+      class="img-fluid vh-100 w-auto"
       id="canvas"
-      style="width: auto;"
     >
 
     <script>
