--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
     style="margin: 0"
   >
     <canvas
-      class="img-fluid vh-100 w-auto"
+      class="img-fluid mh-100 mw-100"
       id="canvas"
     >
 
