--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,8 +6,9 @@
     style="margin: 0"
   >
     <canvas
-      class="img-fluid mh-100 w-auto"
+      class="img-fluid"
       id="canvas"
+      style="height: 100;width: auto;"
     >
 
     <script>
