lebih pas paslagi

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,9 +6,8 @@
     style="margin: 0"
   >
     <canvas
-      class="img-fluid"
+      class="img-fluid w-100 h-75"
       id="canvas"
-      style="height: 100;width: auto;"
     >
 
     <script>
