--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
   <%- include('./partials/head.ejs') %>
-  <body
+  <!-- <body
   class="bg-dark text-light d-flex flex-column vh-100 align-items-center justify-content-center"
     style="margin: 0"
+  > -->
+  <body
+  class="ratio ratio-16x9 bg-dark text-light d-flex flex-column align-items-center justify-content-center"
   >
     <canvas
-      class="img-fluid w-100 h-75"
       id="canvas"
     >
 
