lebih pas paslagi

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,11 +6,14 @@
     style="margin: 0"
   > -->
   <body
-  class="ratio ratio-16x9 bg-dark text-light d-flex flex-column align-items-center justify-content-center"
+  class="vh-100 bg-dark text-light d-flex flex-column align-items-center justify-content-center"
   >
-    <canvas
+    <div class="ratio ratio-16x9">
+
+      <canvas
       id="canvas"
-    >
+      >
+    </div>
 
     <script>
       var portStr = "";
