--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,21 +1,14 @@
 <!DOCTYPE html>
 <html>
   <%- include('./partials/head.ejs') %>
-  <!-- <body
+  <body
   class="bg-dark text-light d-flex flex-column vh-100 align-items-center justify-content-center"
     style="margin: 0"
-  > -->
-  <body
-  class="vh-100 bg-dark text-light d-flex flex-column align-items-center justify-content-center"
   >
-    <div class="ratio ratio-16x9">
-
-      <canvas
+    <canvas
+      class="img-fluid vh-100 ratio ratio-16x9"
       id="canvas"
-      
-      style="height: 100;"
-      >
-    </div>
+    >
 
     <script>
       var portStr = "";
