--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
     style="margin: 0"
   >
     <canvas
-      class="img-fluid mh-100 ratio ratio-16x9"
+      class="img-fluid mh-100 mw-50 ratio ratio-16x9"
       id="canvas"
     >
 
