lebih pas paslagi

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,7 @@
     <canvas
       class="img-fluid mh-100 mw-50 ratio ratio-16x9"
       id="canvas"
+      style="width: 50%;"
     >
 
     <script>
