--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,9 +6,8 @@
     style="margin: 0"
   >
     <canvas
-      class="img-fluid mh-100 mw-50 ratio ratio-16x9"
+      class="img-fluid min-vh-100 vw-50 ratio ratio-16x9"
       id="canvas"
-      style="width: 50%;"
     >
 
     <script>
