lebih pas paslagi

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
     style="margin: 0"
   >
     <canvas
-      class="img-fluid min-vh-100 vw-50 ratio ratio-16x9"
+      class="img-fluid min-vh-100 min-vw-50 ratio ratio-16x9"
       id="canvas"
     >
 
