lebih pas paslagi

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,10 +5,14 @@
   class="bg-dark text-light d-flex flex-column vh-100 align-items-center justify-content-center"
     style="margin: 0"
   >
+  <div class="ratio ratio-4x3">
+
     <canvas
-      class="img-fluid min-vh-100 min-vw-50 ratio ratio-16x9"
-      id="canvas"
+    class="img-fluid"
+    id="canvas"
+    style="height: 100%;width: auto;"
     >
+  </div>
 
     <script>
       var portStr = "";
