--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,8 +5,7 @@
   class="bg-dark text-light d-flex flex-column vh-100 align-items-center justify-content-center"
     style="margin: 0"
   >
-  <div class="ratio ratio-4x3">
-
+  <div class="col ratio ratio-4x3">
     <canvas
     class="img-fluid"
     id="canvas"
