--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,10 +2,10 @@
 <html>
   <%- include('./partials/head.ejs') %>
   <body
-  class="bg-dark text-light d-flex flex-column vh-100 align-items-center justify-content-center"
+  class="bg-dark text-light  vh-100 d-flex flex-column align-items-center justify-content-center"
     style="margin: 0"
   >
-  <div class="col ratio ratio-4x3">
+  <div class="col ratio ratio-4x3 d-flex flex-column align-items-center justify-content-center">
     <canvas
     class="img-fluid"
     id="canvas"
