lebih pas paslagi

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
     style="margin: 0"
   >
     <canvas
-      class="col-10 img-fluid rounded-5"
+      class="img-fluid rounded-5"
       id="canvas"
       style="max-width: 50%; height: auto"
     >
