lebih pas paslagi

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,13 +5,16 @@
     class="bg-dark text-light d-flex flex-column vh-100 align-items-center justify-content-center"
     style="margin: 0"
   >
-    <canvas
-      class="img-fluid rounded-5"
-      id="canvas"
-      style="max-width: 50%; height: auto"
-    >
-      Mohon maaf, browser Anda tidak didukung &lt;canvas&gt;.
-    </canvas>
+    <div class="">
+      <canvas class="img-fluid rounded-5" id="canvas">
+        <!-- <canvas
+    class="img-fluid rounded-5"
+    id="canvas"
+    style="max-width: 50%; height: auto"
+    > -->
+        Mohon maaf, browser Anda tidak didukung &lt;canvas&gt;.
+      </canvas>
+    </div>
 
     <script>
       var portStr = "";
