--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,8 +5,8 @@
     class="bg-dark text-light d-flex flex-column vh-100 align-items-center justify-content-center"
     style="margin: 0"
   >
-    <div class="">
-      <canvas class="img-responsive" id="canvas">
+    <div class="col-12">
+      <canvas class="img-responsive mw-100 h-auto" id="canvas">
         <!-- <canvas
     class="img-fluid rounded-5"
     id="canvas"
