--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
     style="margin: 0"
   >
     <div class="col-12">
-      <canvas class="img-responsive mh-100 w-auto" id="canvas">
+      <canvas class="img-fluid mw-100 h-auto" id="canvas">
         <!-- <canvas
     class="img-fluid rounded-5"
     id="canvas"
