--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
     class="bg-dark text-light d-flex flex-column vh-100 align-items-center justify-content-center"
     style="margin: 0"
   >
-    <div class="col-12">
+    <div class="">
       <canvas class="img-fluid mw-100 h-auto" id="canvas">
         <!-- <canvas
     class="img-fluid rounded-5"
