lebih pas paslagi

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
     style="margin: 0"
   >
     <div class="">
-      <canvas class="img-fluid mw-100 mh-100" id="canvas">
+      <canvas class="img-fluid vh-100" id="canvas">
         <!-- <canvas
     class="img-fluid rounded-5"
     id="canvas"
