lebih pas paslagi

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,8 +2,8 @@
 <html>
   <%- include('./partials/head.ejs') %>
   <body
-    class="bg-dark text-light d-flex flex-column vh-100 align-items-center justify-content-center"
-    style="margin: 0"
+    class="text-light d-flex flex-column vh-100 align-items-center justify-content-center"
+    style="margin: 0;background-image:linear-gradient(310deg,#7928ca,#ff0080);"
   >
     <div class="">
       <canvas class="img-fluid vh-100 w-auto" id="canvas">
