--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
     style="margin: 0;background-image:linear-gradient(310deg,#7928ca,#ff0080);"
   >
     <div class="">
-      <canvas class="img-fluid vh-100 w-auto rounded-5 d-flex justify-content-center align-items-center" id="canvas">
+      <canvas class="img-fluid vh-100 w-auto rounded-5 d-flex justify-content-center align-items-center m-2" id="canvas">
         <!-- <canvas
     class="img-fluid rounded-5"
     id="canvas"
