no console blob

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -53,7 +53,7 @@
 
       ws.onmessage = function (message) {
         var url = URL.createObjectURL(message.data);
-        console.log(url);
+        // console.log(url);
         img.src = url;
       };
     </script>
