--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,10 +3,16 @@
   <%- include('./partials/head.ejs') %>
   <body
     class="text-light d-flex flex-column vh-100 align-items-center justify-content-center"
-    style="margin: 0;background-image:linear-gradient(310deg,#7928ca,#ff0080);"
+    style="
+      margin: 0;
+      background-image: linear-gradient(310deg, #7928ca, #ff0080);
+    "
   >
     <div class="">
-      <canvas class="img-fluid vh-100 w-auto rounded-5 d-flex justify-content-center align-items-center" id="canvas">
+      <canvas
+        class="img-fluid vh-100 w-auto rounded-5 d-flex justify-content-center align-items-center"
+        id="canvas"
+      >
         <!-- <canvas
     class="img-fluid rounded-5"
     id="canvas"
@@ -50,12 +56,19 @@
           canvas.height
         ); // destination rectangle
       };
-      
+
       ws.onmessage = function (message) {
         var url = URL.createObjectURL(message.data);
         // console.log(url);
         img.src = url;
       };
+
+      window.addEventListener("message", function (event) {
+        if (event.data === "takeSnapshot") {
+          // Code to trigger snapshot in the iframe
+          // Example: document.getElementById('myCanvas').toDataURL();
+        }
+      });
     </script>
   </body>
 </html>
